tests/ui/dropck/dropck_no_diverge_on_nonregular_1.stderr
error[E0320]: overflow while adding drop-check rules for `FingerTree<i32>`
  --> $DIR/dropck_no_diverge_on_nonregular_1.rs:25:9
   |
LL |     let ft =
   |         ^^
   |
   = note: overflowed on `FingerTree<Node<Node<Node<Node<Node<Node<Node<Node<Node<...>>>>>>>>>>`
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/dropck_no_diverge_on_nonregular_1.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0320`.
